--- a/bundle.yaml
+++ b/bundle.yaml
@@ -10214,6 +10214,12 @@ spec:
                               updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names'
                             type: string
                         type: object
+                      propagateOwnerReferences:
+                        description: Controls whether the ownerReferences in the StatefulSet
+                          metadata should be set as ownerReferences in its PersistentVolumeClaims
+                          as well. If true then the ownerReferences will be propagated.
+                          Default is false.
+                        type: boolean
                       spec:
                         description: 'Defines the desired characteristics of a volume
                           requested by a pod author. More info: https://kubernetes.io/docs/concepts/storage/persistent-volumes#persistentvolumeclaims'
@@ -19844,6 +19850,12 @@ spec:
                               updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names'
                             type: string
                         type: object
+                      propagateOwnerReferences:
+                        description: Controls whether the ownerReferences in the StatefulSet
+                          metadata should be set as ownerReferences in its PersistentVolumeClaims
+                          as well. If true then the ownerReferences will be propagated.
+                          Default is false.
+                        type: boolean
                       spec:
                         description: 'Defines the desired characteristics of a volume
                           requested by a pod author. More info: https://kubernetes.io/docs/concepts/storage/persistent-volumes#persistentvolumeclaims'
@@ -29193,6 +29205,12 @@ spec:
                               updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names'
                             type: string
                         type: object
+                      propagateOwnerReferences:
+                        description: Controls whether the ownerReferences in the StatefulSet
+                          metadata should be set as ownerReferences in its PersistentVolumeClaims
+                          as well. If true then the ownerReferences will be propagated.
+                          Default is false.
+                        type: boolean
                       spec:
                         description: 'Defines the desired characteristics of a volume
                           requested by a pod author. More info: https://kubernetes.io/docs/concepts/storage/persistent-volumes#persistentvolumeclaims'
@@ -39038,6 +39056,12 @@ spec:
                               updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names'
                             type: string
                         type: object
+                      propagateOwnerReferences:
+                        description: Controls whether the ownerReferences in the StatefulSet
+                          metadata should be set as ownerReferences in its PersistentVolumeClaims
+                          as well. If true then the ownerReferences will be propagated.
+                          Default is false.
+                        type: boolean
                       spec:
                         description: 'Defines the desired characteristics of a volume
                           requested by a pod author. More info: https://kubernetes.io/docs/concepts/storage/persistent-volumes#persistentvolumeclaims'
