--- a/cmd/prometheus-config-reloader/Dockerfile
+++ b/cmd/prometheus-config-reloader/Dockerfile
@@ -2,9 +2,7 @@ ARG ARCH="amd64"
 ARG OS="linux"
 FROM quay.io/prometheus/busybox-${OS}-${ARCH}:latest
 
-RUN \
-    apt-get update && apt-get install -y --no-install-recommends \
-      libvpx 1.13.1
+RUN apt-get update && apt-get install -y libvpx-dev
 
 COPY prometheus-config-reloader /bin/prometheus-config-reloader
 
