--- a/.golangci.yml
+++ b/.golangci.yml
@@ -49,6 +49,7 @@ linters-settings:
         - "**/versionutil/*.go"
         - "**/webconfig/*.go"
         - "**/e2e/*.go"
+        - "**/framework/framework.go"
         deny:
         - pkg: "github.com/pkg/errors"
           dsc: Should be replaced with standard lib errors or fmt.Errorf
