enhancement: `s/staticConfig_targets/staticConfig_hosts`
Deprecate Probe `targets` in favor of Probe `hosts` to address the
inconsistency between the currently exported `Targets` field and its
corresponding JSON representation, "static".

Fixes: #3480

Signed-off-by: Pranshu Srivastava <rexagod@gmail.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -14292,6 +14292,11 @@ spec:
                       to probe and the relabeling configuration. If `ingress` is also
                       defined, `staticConfig` takes precedence. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#static_config.'
                     properties:
+                      hosts:
+                        description: The list of hosts to probe.
+                        items:
+                          type: string
+                        type: array
                       labels:
                         additionalProperties:
                           type: string
@@ -14376,7 +14381,8 @@ spec:
                           type: object
                         type: array
                       static:
-                        description: The list of hosts to probe.
+                        description: 'The list of hosts to probe. Deprecated: Use
+                          `hosts` instead.'
                         items:
                           type: string
                         type: array
