--- a/bundle.yaml
+++ b/bundle.yaml
@@ -4,7 +4,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
-    prometheus-operator.dev/version: 0.68.0
+    operator.prometheus.io/version: 0.68.0
   creationTimestamp: null
   name: alertmanagerconfigs.monitoring.coreos.com
 spec:
@@ -5673,7 +5673,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
-    prometheus-operator.dev/version: 0.68.0
+    operator.prometheus.io/version: 0.68.0
   creationTimestamp: null
   name: alertmanagers.monitoring.coreos.com
 spec:
@@ -13085,7 +13085,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
-    prometheus-operator.dev/version: 0.68.0
+    operator.prometheus.io/version: 0.68.0
   creationTimestamp: null
   name: podmonitors.monitoring.coreos.com
 spec:
@@ -13777,7 +13777,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
-    prometheus-operator.dev/version: 0.68.0
+    operator.prometheus.io/version: 0.68.0
   creationTimestamp: null
   name: probes.monitoring.coreos.com
 spec:
@@ -14511,7 +14511,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
-    prometheus-operator.dev/version: 0.68.0
+    operator.prometheus.io/version: 0.68.0
   creationTimestamp: null
   name: prometheusagents.monitoring.coreos.com
 spec:
@@ -22944,7 +22944,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
-    prometheus-operator.dev/version: 0.68.0
+    operator.prometheus.io/version: 0.68.0
   creationTimestamp: null
   name: prometheuses.monitoring.coreos.com
 spec:
@@ -32713,7 +32713,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
-    prometheus-operator.dev/version: 0.68.0
+    operator.prometheus.io/version: 0.68.0
   creationTimestamp: null
   name: prometheusrules.monitoring.coreos.com
 spec:
@@ -32845,7 +32845,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
-    prometheus-operator.dev/version: 0.68.0
+    operator.prometheus.io/version: 0.68.0
   creationTimestamp: null
   name: scrapeconfigs.monitoring.coreos.com
 spec:
@@ -34115,7 +34115,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
-    prometheus-operator.dev/version: 0.68.0
+    operator.prometheus.io/version: 0.68.0
   creationTimestamp: null
   name: servicemonitors.monitoring.coreos.com
 spec:
@@ -34837,7 +34837,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
-    prometheus-operator.dev/version: 0.68.0
+    operator.prometheus.io/version: 0.68.0
   creationTimestamp: null
   name: thanosrulers.monitoring.coreos.com
 spec:
