--- a/example/prometheus-operator-crd/monitoring.coreos.com_probes.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_probes.yaml
@@ -4,7 +4,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
-    prometheus-operator.dev/version: 0.68.0
+    operator.prometheus.io/version: 0.68.0
   creationTimestamp: null
   name: probes.monitoring.coreos.com
 spec:
