--- a/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml
@@ -41,7 +41,7 @@ spec:
               by Prometheus.
             properties:
               attachMetadata:
-                description: "attachMetadata defines additional metadata which is
+                description: "`attachMetadata` defines additional metadata which is
                   added to the discovered targets. \n It requires Prometheus >= v2.37.0."
                 properties:
                   node:
@@ -137,10 +137,11 @@ spec:
                         \n Deprecated: use `authorization` instead."
                       type: string
                     bearerTokenSecret:
-                      description: "Secret to mount to read bearer token for scraping
-                        targets. The secret needs to be in the same namespace as the
-                        service monitor and accessible by the Prometheus Operator.
-                        \n Deprecated: use `authorization` instead."
+                      description: "`bearerTokenSecret` specifies a key of a Secret
+                        containing the bearer token for scraping targets. The secret
+                        needs to be in the same namespace as the ServiceMonitor object
+                        and readable by the Prometheus Operator. \n Deprecated: use
+                        `authorization` instead."
                       properties:
                         key:
                           description: The key of the secret to select from.  Must
@@ -658,14 +659,14 @@ spec:
                     type: array
                 type: object
               podTargetLabels:
-                description: podTargetLabels defines the labels which are transferred
-                  from the associated Kubernetes `Pod` object onto the ingested metrics.
+                description: '`podTargetLabels` defines the labels which are transferred
+                  from the associated Kubernetes `Pod` object onto the ingested metrics.'
                 items:
                   type: string
                 type: array
               sampleLimit:
-                description: sampleLimit defines a per-scrape limit on the number
-                  of scraped samples that will be accepted.
+                description: '`sampleLimit` defines a per-scrape limit on the number
+                  of scraped samples that will be accepted.'
                 format: int64
                 type: integer
               selector:
@@ -714,15 +715,15 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               targetLabels:
-                description: targetLabels defines the labels which are transferred
+                description: '`targetLabels` defines the labels which are transferred
                   from the associated Kubernetes `Service` object onto the ingested
-                  metrics.
+                  metrics.'
                 items:
                   type: string
                 type: array
               targetLimit:
-                description: targetLimit defines a limit on the number of scraped
-                  targets that will be accepted.
+                description: '`targetLimit` defines a limit on the number of scraped
+                  targets that will be accepted.'
                 format: int64
                 type: integer
             required:
