--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
@@ -2904,6 +2904,15 @@ spec:
                   - name
                   type: object
                 type: array
+              enableFeatures:
+                description: Enable access to Alertmanager feature flags. By default,
+                  no features are enabled. Enabling features which are disabled by
+                  default is entirely outside the scope of what the maintainers will
+                  support and by doing so, you accept that this behaviour may break
+                  at any time without notice.
+                items:
+                  type: string
+                type: array
               externalUrl:
                 description: The external URL the Alertmanager instances will be available
                   under. This is necessary to generate correct URLs. This is necessary
